1) simplified entity layer (less entities); 2) added Invoice::save functionality + unit test